# kronforce

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md  RELEASES.md  TODO.md  build.rs  deny.toml  docker-compose.agent.yml  docker-compose.full.yml  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: ci.yml  docker-latest.yml  release.yml
data/test/: seed.sh  seed_data.json
demo/: .env.example  Caddyfile  README.md  docker-compose.yml  reseed.sh  seed-demo.sh
deploy/docker/: .env.example  Dockerfile  Dockerfile.ha  docker-compose.agent.yml  docker-compose.full.yml  docker-compose.ha.yml  docker-compose.yml  entrypoint-ha.sh  litestream.yml
docs/: API.md  ARCHITECTURE.md  CODE_ARCHITECTURE.md  CUSTOM_AGENTS.md  DEPLOYMENT.md  EXTENDING.md  MIGRATION.md  PERFORMANCE.md  SECURITY.md  TESTING.md  TRIGGERS_AND_WORKFLOWS.md  TUTORIAL.md
e2e/: README.md  global-setup.js  global-teardown.js  helpers.js  package-lock.json  package.json  playwright.config.js
e2e/tests/: agents-list.spec.js  jobs.spec.js  regressions.spec.js  scripts.spec.js  settings.spec.js  smoke.spec.js  variables.spec.js
examples/: custom_agent.py  grpc_agent.py  mcp_agent.py  mcp_test_server.py  requirements.txt  seed.sh
migrations/: 0001_init.sql  0002_audit_log.sql  0003_job_groups.sql  0004_execution_retry.sql  0005_oidc_sessions.sql  0006_variable_secrets.sql  0007_job_versions.sql  0008_approval_workflows.sql  0009_key_scopes_and_priority.sql  0010_sla.sql  0011_job_templates.sql  0012_default_templates.sql  0013_ip_allowlist.sql  0014_key_expiry.sql  0015_schedule_window.sql  0016_concurrency_and_params.sql  0017_timezone_and_interval.sql  0018_connections.sql  0019_variable_expiration.sql  0020_agent_system_info.sql  0021_event_execution_id.sql  0022_execution_perf_indexes.sql
scripts/: TestDocker.dockerfile  Wargaming.rhai  kronforce-import-crontab  kronforce-import-jenkins  kronforce-upload-scripts  test.rhai
src/: agent_client.rs  agent_server.rs  api.rs  config.rs  cron_parser.rs  crypto.rs  dag.rs  dashboard.html  db.rs  error.rs  executor.rs  lib.rs  main.rs  mcp_server.rs  models.rs  notifications.rs  output_rules.rs  protocol.rs  scheduler.rs  scripts.rs  tls.rs
src/agent/: client.rs  mod.rs  protocol.rs  server.rs
src/api/: agents.rs  ai.rs  audit.rs  auth.rs  callbacks.rs  connections.rs  data.rs  events.rs  executions.rs  jobs.rs  mcp.rs  mod.rs  oidc.rs  rate_limit.rs  scripts.rs  settings.rs  stats.rs  templates.rs  variables.rs
src/db/: agents.rs  audit.rs  connections.rs  events.rs  executions.rs  helpers.rs  jobs.rs  keys.rs  mod.rs  models.rs  queue.rs  sessions.rs  settings.rs  templates.rs  variables.rs
src/executor/: connections.rs  dispatch.rs  local.rs  mod.rs  notifications.rs  output_rules.rs  post_execution.rs  runner.rs  scripts.rs  utils.rs
tests/: api_key_tests.rs  auth_permission_tests.rs  calendar_tests.rs  config_tests.rs  cron_parser_tests.rs  dag_tests.rs  db_tests.rs  error_tests.rs  factory_tests.rs  helpers_tests.rs  model_tests.rs  output_rules_tests.rs  post_execution_tests.rs  variables_tests.rs
web/: index.html
(+248 files in other folders)
