[package]
name = "kronforce"
version = "0.2.0"
edition = "2024"

[lib]
name = "kronforce"
path = "src/lib.rs"

[[bin]]
name = "kronforce"
path = "src/bin/controller.rs"

[[bin]]
name = "kronforce-agent"
path = "src/bin/agent.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
hostname = "0.4"
sha2 = "0.10"
rand = "0.9"
base64 = "0.22"
rhai = "1"
