[package]
name = "kronforce"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Workload automation and job scheduling engine with distributed agents"
repository = "https://github.com/mikemiles-dev/kronforce"

[lib]
name = "kronforce"
path = "src/lib.rs"

[[bin]]
name = "kronforce"
path = "src/bin/controller.rs"

[[bin]]
name = "kronforce-agent"
path = "src/bin/agent.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["json"] }
tokio-stream = { version = "0.1", features = ["sync"] }
dashmap = "6"
futures-core = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
r2d2 = "0.8"
r2d2_sqlite = "0.25"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
petgraph = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
thiserror = "2"
reqwest = { version = "0.12", features = ["json"] }
hostname = "0.4"
sha2 = "0.11"
rand = "0.9"
base64 = "0.22"
rhai = "1"
regex = "1.12.3"
url = "2"
lettre = { version = "0.11.21", features = ["tokio1-native-tls"] }
tempfile = "3"
cookie = "0.18"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-pki-types = { version = "1", features = ["std", "alloc"] }
hyper = { version = "1", features = ["server", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto", "http1", "http2"] }
tower-service = "0.3"
aes-gcm = "0.10"
hex = "0.4.3"
